# github-actions

./: CMakeLists.txt  CMakePresets.json  main.cpp
.github/workflows/: build.yml
